--- a/content/blog/2025-02-17.md
+++ b/content/blog/2025-02-17.md
@@ -1,8 +1,8 @@
 ---
-title: A Draft to Illustrate Some Complex Stuff
-description: This is an eleventy example
-date: 2025-02-17
-tags: ["example"]
+title: Are Portland Public Schools as Bad as They Say
+description: I got tired of hearing people bash PPS - I think the situation is more nuanced. My kids have gone to public schools, charter schools, and private schools. They all had issues. They all had positives. So, I wanted to dig into the data a bit and see what test scores shows about PPS vs other districts in the city and state. 
+date: 2026-02-01
+tags: ["analysis"]
 draft: true
 ---
 
@@ -14,15 +14,8 @@ Leverage agile frameworks to provide a robust synopsis for high level overviews.
 
 Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.
 
-```js
-// this is a command
-function myCommand() {
-	let counter = 0;
-	counter++;
-}
-
-// Test with a line break above this line.
-console.log('Test');
+```R
+readr::read_xlsx("file.xslx")
 ```
 
 ### Heading with a [link](#code)
